cmake_minimum_required(VERSION 3.5.0)

project(project_euler_my_solutions-src)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(problem001)
add_subdirectory(problem002)
add_subdirectory(problem003)
add_subdirectory(problem004)
add_subdirectory(problem005)
add_subdirectory(problem014)
add_subdirectory(problem015)
add_subdirectory(problem018)
